attempt to fix layout issues

--- a/app/shell/shell.less
+++ b/app/shell/shell.less
@@ -3,6 +3,9 @@
 }
 
 .body {
+    margin: 0;
+    padding: 0;
+    border: 0;
     flex: 1 0;
     overflow: hidden;
 }
@@ -37,9 +40,15 @@
 }
 
 .body2 {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
 .main {
+    margin: 0;
+    padding: 0;
+    border: 0;
     display: flex;
     flex-direction: column;
     background-color: aquamarine;
@@ -67,6 +76,9 @@
 }
 
 .alt {
+    margin: 0;
+    padding: 0;
+    border: 0;
     display: flex;
     flex-direction: column;
     background-color: darkcyan;
