--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 html, body, compose {
     margin: 0;
     padding: 0;
+    border: 0;
     width: 100%;
     height: 100%;
 }
